--- a/package.json
+++ b/package.json
@@ -75,12 +75,14 @@
 	"dependencies": {
 		"@sweetalert2/theme-dark": "^5.0.15",
 		"font-awesome": "^4.7.0",
+		"jsonwebtoken": "^9.0.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-jwt": "^1.2.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.1.3",
-		"sweetalert2": "^11.7.22"
+		"sweetalert2": "^11.7.27"
 	}
 }
