--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_DEBUG=1
+PYTHON_VERSION=3.10.6
 DEBUG=TRUE
 
 # JWT_SECRET_KEY
