--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ werkzeug==1.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 wtforms==2.3.3
 flask-jwt-extended==3.24.1
 requests==2.25.1
+bcrypt==3.2.0
