--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --port 3000",
-		"build": "webpack --config webpack.prod.js"
+		"build": "webpack --config webpack.prod.js",
+		"prod": "serve -s build"
 	},
 	"author": {
 		"name": "Alejandro Sanchez",
@@ -55,7 +56,8 @@
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.6.0",
-		"webpack-merge": "^5.8.0"
+		"webpack-merge": "^5.8.0",
+		"serve": "^11.3.2"
 	},
 	"babel": {
 		"presets": [
