--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.1.3",
-		"sweetalert2": "^11.7.27"
+		"sweetalert2": "^11.7.27",
+		"react-scripts": "4.0.3"
 	}
 }
