--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "webpack-dev-server --config webpack.dev.js --port 3000",
-		"build": "react-scripts build",
-		"prod": "serve -s build"
+		"build": "webpack --config webpack.prod.js"
 	},
 	"author": {
 		"name": "Alejandro Sanchez",
@@ -56,8 +55,7 @@
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.6.0",
-		"webpack-merge": "^5.8.0",
-		"serve": "^11.3.2"
+		"webpack-merge": "^5.8.0"
 	},
 	"babel": {
 		"presets": [
@@ -85,7 +83,6 @@
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.1.3",
-		"sweetalert2": "^11.7.27",
-		"react-scripts": "4.0.3"
+		"sweetalert2": "^11.7.27"
 	}
 }
